force-app/main/default/objects/InvoiceItem__c/InvoiceItem__c.object-meta.xml
<CustomObject>
    <label>Ligne de facture</label>
    <nameField>
        <label>Nom de la ligne de facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes de facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>