force-app/main/default/objects/InvoiceItem__c/fields/Insertion__c.field-meta.xml
<CustomField>
    <fullName>Insertion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insertion</label>
    <referenceTo>Insertion__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>