force-app/main/default/objects/InvoiceItem__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>