force-app/main/default/objects/InvoiceItem__c/fields/Ordre_interne__c.field-meta.xml
<CustomField>
    <fullName>Ordre_interne__c</fullName>
    <formula>text(Insertion__r.OpportunityProduct__r.Package__r.OrdreInterne__c)</formula>
    <label>Ordre interne</label>
    <type>Text</type>
</CustomField>