force-app/main/default/objects/InvoiceItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>invoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>