force-app/main/default/objects/InvoiceItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>