force-app/main/default/objects/InvoiceItem__c/fields/TotalExcludingVat__c.field-meta.xml
<CustomField>
    <fullName>TotalExcludingVat__c</fullName>
    <label>Total HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>