force-app/main/default/objects/InvoiceItem__c/fields/TotalIncludingVat__c.field-meta.xml
<CustomField>
    <fullName>TotalIncludingVat__c</fullName>
    <formula>( TotalExcludingVat__c * Invoice__r.VatRate__c ) + TotalExcludingVat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>