force-app/main/default/objects/InvoiceItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Insertion__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount__c</columns>
    <columns>TotalExcludingVat__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>